UN-spacing-adjustment

--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -67,7 +67,7 @@
          .challenges__section .content-image__content {
             min-height: 254px; 
             align-content: center; 
-            padding-left: 10% !important;
+            padding-left: 12% !important;
             padding-right: 30px !important;
          }
          .challenges__section .section-block__content li,
@@ -120,9 +120,12 @@
       .key__highlight h1 {
         text-align: left;
       }
+      .key__highlight ul {
+         margin: 0px !important;
+      }
       
       .key__highlight ul {
-        --col-gap: 50px;
+        --col-gap: 56px;
         --barH: 22px;
         --roleH: 2rem;
         --flapH: 2rem;
@@ -238,7 +241,7 @@
       } */
       .boxes__wrapper--columns-four .boxes__box-item {
          width: 100% !important;
-         max-width: 430px !important;
+         max-width: 460px !important;
       }
       .features__container .boxes__box-item {
          padding: 0;
@@ -299,7 +302,7 @@
 }		
 
       .content-image__image .swiper {
-         padding-top: 30px;
+         padding-top: 15px;
       }
 
       .content-image__content .fade-in-element h2{
@@ -343,6 +346,11 @@
       @media (max-width: 1530px) {
          .features__container .boxes__box-item {
             min-height: 393px;
+         }
+      }
+      @media (max-width: 425px) {
+         .features__container .boxes__box-item {
+            min-height: 325px;
          }
       }
 
@@ -695,19 +703,19 @@
                         </section>
                         <!-- .section -->
                         <section class="section-block  section-block--container-default section-block--theme-light-purple section-block--theme-light-blue-wave-reverse content-image content-image-2 ">
-                           <div class="container evaluation-section" style="padding-left: 30px; padding-right: 30px;">
+                           <div class="container evaluation-section">
 							         <div class="section-block__header text-left boxes--columns-two" style="padding-bottom: 30px;">
                                  <h1 class="section-block__title boxes__title">Evaluation Landscape</h1>
                               </div>
-							         <img src="../assets/images/Presentation2.jpg" class="attachment-full size-full evaluation-landing" alt="Evaluation Landscape" loading="lazy"/>
+							         <img src="../assets/images/UniphyEvaluationLandscape.png" class="attachment-full size-full evaluation-landing" alt="Evaluation Landscape" loading="lazy"/>
                            </div>
                            <!-- .container -->
                         </section>
                         <!-- .section -->
-                        <section class=" section-block--container-default content-image content-image-3" style="margin-top: 40px; margin-bottom: 70px;">
+                        <section class=" section-block--container-default content-image content-image-3" style="margin-bottom: 30px;">
                            <div class="container challenges__section">
                               <div class="section-block__header text-right boxes--columns-two">
-                                 <h1 class="section-block__title boxes__title " style="padding-left: 30px; padding-right: 30px;">Challenges We Solve</h1>
+                                 <h1 class="section-block__title boxes__title ">Challenges We Solve</h1>
                               </div>
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                                  <div class="content-image__content text-right">
@@ -759,7 +767,7 @@
                                       </div>
                                     </div>
                                  </div>
-                                 <div class="content-image__image  content-image__image--align-center">
+                                 <div class="content-image__image  content-image__image--align-center" style="padding-left: 0px !important;">
                                     <div class="content-image__inner content-image__inner--image-right content-image__inner--">
                                        <div class="swiper swiper3 mySwiper">
                                          <div class="swiper-wrapper">
@@ -807,7 +815,7 @@
                         <!-- .section -->
                         <section class="section-block section-block--theme-default content-image content-image-4 section-block--theme-light-purple-wave" style="background-color: #1d2087;">
                            <div class="container  key__highlight">
-                              <div class="section-block__header text-left" style="padding-left: 30px; padding-right: 30px;">
+                              <div class="section-block__header text-left">
                                  <h1 class="section-block__title content-image__title" style=" color: white; mix-blend-mode: difference;">Key Highlights</h1>
                               </div>
                               <ul>
@@ -843,10 +851,10 @@
                         <section class="section-block section-block--container-default section-block--theme-light-purple content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important;">
                            <div class="container">
                               <div class="section-block__header text-center boxes--columns-two">
-                                 <h1 class="section-block__title boxes__title">Intelligent Automation through Tools and Accelerators</h1>
+                                 <h1 class="section-block__title boxes__title" style="margin-bottom: 0px;">Intelligent Automation through Tools and Accelerators</h1>
                               </div>
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
@@ -894,9 +902,9 @@
                                     </div>
                                     <img width="2120" height="1354" src="../assets/images/foler.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	 -->
                                  </div>
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
                                     <img width="2120" height="1354" src="../assets/images/bag.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
-                                    <div class="content-image__content"">
+                                    <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
                                              <li>Hybrid Connectivity</li>
@@ -915,7 +923,7 @@
                         <section class="section-block section-block--theme-light-purple section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important; padding-top: 0 !important;">
                            <div class="container">
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
@@ -967,7 +975,7 @@
                                     </div>
                                     <img width="2120" height="1354" src="../assets/images/coin.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	 -->
                                  </div>
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
                                     <img width="2120" height="1354" src="../assets/images/handshake.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
@@ -1098,7 +1106,7 @@
                                  <h1 class="section-block__title boxes__title">Uniphy is one application for the entire DevOps lifecycle</h1>
                               </div>
                               <div class="boxes__wrapper boxes__wrapper--columns-four">
-                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover">
+                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-left: 0px">
                                     <a target="" href="#">
                                        <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Manage</span></h4>
@@ -1120,7 +1128,7 @@
                                        </div>
                                     </a>
                                  </div>
-                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover">
+                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-right: 0px">
                                     <a target="" href="#">
                                        <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Monitor</span></h4>
