UN-Key hightlights responsive fix

--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -379,6 +379,24 @@
             margin-left: 0 !important;
          }
       }
+
+      @media (max-width: 1574px) {
+         .key__highlight ul li {
+            width: 169px
+         }
+      }
+
+      @media (max-width: 1500px) {
+         .key__highlight ul li {
+            width: 165px
+         }
+      }
+
+      @media (max-width: 1475px) {
+         .key__highlight ul li {
+            width: 160px
+         }
+      }
       </style>
       <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
       <!-- This site is optimized with the Yoast SEO plugin v17.2 - https://yoast.com/wordpress/plugins/seo/ -->
