--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -366,6 +366,11 @@
             min-height: 325px;
          }
       }
+      @media (max-width: 1072px) {
+         .features__container .boxes__wrapper--columns-four .boxes__box-item {
+            margin: 0px 15px 25px 15px !important;
+         }
+      }
 
       @media (max-width: 425px) {
          .evaluation-section .section-block__header,
@@ -885,7 +890,7 @@
                                  <h1 class="section-block__title boxes__titlec" style="margin-bottom: 0px;">Intelligent Automation through Tools and Accelerators</h1>
                               </div>
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--" style="padding-top: 10px;">
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
+                                 <div class="content-image__image  content-image__image--align-center section-block--theme-light-purple" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
@@ -898,7 +903,7 @@
                                     </div>
                                     <img width="2120" height="1354" src="../assets/images/coin.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                  </div>
-                                 <div class="content-image__image  content-image__image--align-center section-block--theme-light-purple" style="display: flex; flex-direction: row; align-items: center; padding-left: 0px;">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0px;">
                                     <img width="2120" height="1354" src="../assets/images/handshake.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
@@ -918,7 +923,7 @@
                         <section class="section-block section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important; padding-top: 0 !important; padding-top: 0 !important;">
                            <div class="container">
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
-                                 <div class="content-image__image  content-image__image--align-center section-block--theme-light-purple" style="display: flex; flex-direction: row; align-items: center; padding-left: 0px;">
+                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0px;">
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
                                           <ul>
@@ -933,7 +938,7 @@
                                     </div>
                                     <img width="2120" height="1354" src="../assets/images/foler.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                  </div>
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0px;">
+                                 <div class="content-image__image  content-image__image--align-center section-block--theme-light-purple" style="display: flex; flex-direction: row; align-items: center; padding-left: 0px;">
                                     <img width="2120" height="1354" src="../assets/images/bag.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
                                     <div class="content-image__content">
                                        <div class="section-block__content text-left ">
@@ -951,85 +956,13 @@
                            </div>
                            <!-- .container -->
                         </section>
-                        <!-- <section class="section-block section-block--theme-light-purple section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important; padding-top: 0 !important;">
-                           <div class="container">
-                              <div class="content-image__inner content-image__inner--image-left content-image__inner--">
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
-                                    <div class="content-image__content">
-                                       <div class="section-block__content text-left ">
-                                          <ul>
-                                             <li>Ops tooling Integration</li>
-                                             <li>Security Tooling Integration</li>
-                                             <li>TTM</li>
-                                             <li>Release Management</li>
-                                             <li>A/B Deployments</li>
-                                             <li>Release Testing</li>
-                                          </ul>
-                                       </div>
-                                    </div>
-                                    <img width="2120" height="1354" src="../assets/images/foler.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
-                                 </div>
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;"> -->
-                                    <!-- <img width="2120" height="1354" src="../assets/images/bag.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
-                                    <div class="content-image__content"">
-                                       <div class="section-block__content text-left ">
-                                          <ul>
-                                             <li>Hybrid Connectivity</li>
-                                             <li>Hybrid Security</li>
-                                             <li>Autoscaling</li>
-                                             <li>Auto Healing</li>
-                                             <li>Canaries</li>
-                                          </ul>
-                                       </div>
-                                    </div> -->
-                                 <!-- </div>
-                              </div>
-                           </div> -->
-                           <!-- .container -->
-                        <!-- </section>
-                        <section class="section-block section-block--container-default content-image content-image-5 Intelligent-automation-section" style="padding-bottom: 0 !important; padding-top: 0 !important;">
-                           <div class="container"> -->
-                              <!-- <div class="section-block__header text-center boxes--columns-two">
-                                 <h1 class="section-block__title boxes__title">Intelligent Automation through Tools and Accelerators</h1>
-                              </div> -->
-                              <!-- <div class="content-image__inner content-image__inner--image-left content-image__inner--">
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center;"> -->
-                                    <!-- <div class="content-image__content">
-                                       <div class="section-block__content text-left ">
-                                          <ul>
-                                             <li>Identify Recurring Data Issues</li>
-                                             <li>Monitoring and Metrics Runbook</li>
-                                             <li>Automation Deployment</li>
-                                             <li>Automation Predictive Operations</li>
-                                          </ul>
-                                       </div>
-                                    </div>
-                                    <img width="2120" height="1354" src="../assets/images/coin.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	 -->
-                                 <!-- </div>
-                                 <div class="content-image__image  content-image__image--align-center" style="display: flex; flex-direction: row; align-items: center; padding-left: 0;">
-                                    <img width="2120" height="1354" src="../assets/images/handshake.png" class="attachment-full size-full" alt="Manage" loading="lazy" sizes="(max-width: 2120px) 100vw, 2120px" />	
-                                    <div class="content-image__content">
-                                       <div class="section-block__content text-left ">
-                                          <ul>
-                                             <li>Source Code</li>
-                                             <li>Management Configuration / Construction</li>
-                                             <li>Build and Continuous Integration</li>
-                                             <li>Automated Testing Artifact/Asset Management</li>
-                                          </ul>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div> -->
-                           <!-- .container -->
-                        <!-- </section> -->
                         <section class="section-block section-block--container-default section-block--theme-default section-block--theme-light-purple-wave boxes boxes-2 ">
                            <div class="container features__container">
                               <div class="section-block__header text-center boxes--columns-two" style="padding-bottom: 40px;">
                                  <h1 class="section-block__title boxes__title">Uniphy is one application for the entire DevOps lifecycle</h1>
                               </div>
                               <div class="boxes__wrapper boxes__wrapper--columns-four">
-                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-left: 0px">
+                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-left: 0px; height: -webkit-fill-available !important;">
                                     <a target="" href="#">
                                        <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Manage</span></h4>
@@ -1040,7 +973,7 @@
                                        </div>
                                     </a>
                                  </div>
-                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover">
+                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="height: -webkit-fill-available !important;">
                                     <a target="" href="#">
                                        <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Deploy</span></h4>
@@ -1051,7 +984,7 @@
                                        </div>
                                     </a>
                                  </div>
-                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-right: 0px">
+                                 <div class="boxes__box-item boxes__box-item--align-left boxes__box-item--style-shadow transition-3d-hover" style="margin-right: 0px; height: -webkit-fill-available !important;">
                                     <a target="" href="#">
                                        <div class="boxes__box-item__image">
                                           <h4 class="section-block__pre-title dynamic-pricing__pre-title" style="position: absolute; margin: 10px 15px 15px 15px;"><span>Monitor</span></h4>
@@ -1144,7 +1077,7 @@
                <div class="clearfix"></div>
                <div class="main-footer__copy">
                   <div class="main-footer__copy__text">
-                     &copy; 2021 Uniphy inc. All Rights Reserved.
+                     &copy; <span id="year"></span> Uniphy Inc. All Rights Reserved.
                   </div>
                   <!-- <div class="main-footer__copy__menu">
                      <ul id="footer-menu" class="menu">
@@ -1268,6 +1201,7 @@
          window.intercomSettings = {
            app_id: "adquux25"
          };
+         document.getElementById("year").textContent = new Date().getFullYear();
       </script>
       <script>
          // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/adquux25'
