UN-color theme changes

--- a/uniphynew/index.html
+++ b/uniphynew/index.html
@@ -652,7 +652,7 @@
                         <!-- .section -->
                         <section class="section-block section-spacing section-block--container-default section-block--theme-light-purple cta cta-1">
                            <div class="container">
-                              <div class="cta__inner   cta__inner--default" style="background: linear-gradient(45deg, #ffca65, #3978ed, #43eada);">
+                              <div class="cta__inner   cta__inner--default" style="background: linear-gradient(to right, #2c339b, #dd4196, #4c327b);">
                                  <div class="cta__content">
                                     <h2>Uniphy is free to get started</h2>
                                     <h3>Sign up to start automating your application lifecycle management</h3>
