--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -813,7 +813,7 @@
                                                  Manual deployments increase the risk of downtime
                                                </p>
                                            </div>
-                                           <div class="swiper-slide" data-content="1" style="background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0,0,0,0.2)), url(../assets/images/SlowTime\(bkp1\).png); background-position: center; font-family: sofia-pro-soft, sans-serif;">
+                                           <div class="swiper-slide" data-content="1" style="background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0,0,0,0.2)), url(../assets/images/SlowTime.png); background-position: center; font-family: sofia-pro-soft, sans-serif;">
                                              <span style="color: #fff;">Slow Time-to-Market</span>
                                                <p style="color: #fff; font-weight: 500;">
                                                  Siloed teams delay product releases
@@ -1001,7 +1001,7 @@
                         </section>
                         <section class="section-block section-spacing section-block--container-default cta cta-1">
                            <div class="container">
-                              <div class="cta__inner   cta__inner--default" style="background: linear-gradient(45deg, #ffca65, #3978ed, #43eada);">
+                              <div class="cta__inner   cta__inner--default" style="background: linear-gradient(to right, #2c339b, #dd4196, #4c327b);">
                                  <div class="cta__content">
                                     <h2>Uniphy is free to get started</h2>
                                     <h3>Sign up to start automating your application lifecycle management</h3>
